--- a/css/index.css
+++ b/css/index.css
@@ -1,3 +1,11 @@
+#addTexture {
+	font-size:18px;
+	border: 1px dotted #c00;
+	padding: 20px;
+	display: inline-block;
+	margin-top:50px;
+	cursor: pointer;
+}
 #mesh-container{
 	transition:transform .8s linear; 
 }
@@ -28,8 +36,11 @@ slides>slide.demo-1 .slide-wrapper{
 }
 #demo-1-container{
 	width:550px;
-	height:550px;
+	height:400px;
 	margin: 0 auto;
+	text-align: center;
+	margin-top: -200px;
+	margin-bottom: 50px;
 }
 .demo-1 h4 {
     color: #fff;
